--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "target": "ES2015",
+    "target": "es6",
     "importHelpers": true,
     "moduleResolution": "node",
     "jsx": "preserve",
@@ -15,10 +15,10 @@
     "baseUrl": ".",
     "outDir": "./compiled",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["app/*"],
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+    "lib": ["esnext", "ES2016"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules", "vue.config.js"]
+  "include": ["app/**/*.ts", "app/**/*.tsx", "app/**/*.vue"],
+  "exclude": ["node_modules"]
 }
