--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "singleQuote": true,
   "arrowParens": "always",
   "useTabs": false,
+  "tabWidth": 2,
   "trailingComma": "es5",
   "quoteProps": "preserve",
   "printWidth": 120,
