--- a/app/vue-renderer/package.json
+++ b/app/vue-renderer/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "clean": "rm -rf ./dist",
+    "serve": "npm run clean && vue-cli-service serve",
+    "build": "npm run clean &&vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "start:dev": "npm run serve"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -18,9 +20,6 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-sass": "^1.4.0",
-    "@snowpack/plugin-vue": "^2.6.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -40,7 +39,6 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "sass-loader": "^10.0.0",
-    "snowpack": "^3.5.5",
     "typescript": "^4.3.2",
     "vue-cli-plugin-vuetify": "~2.4.0",
     "vue-template-compiler": "^2.6.11",
